﻿- Add minimum train dwell time


Version 1.2.2 -

- Add support for biofuel bus depots


Version 1.2.1 -

- Add null checks to m_transportInfo and m_secondaryTransport info in delay Prefix patch
- Update bundled CitiesHarmony.API to 2.1.0 (Harmony 2.2)


Version 1.2 -

- Add support for passenger helicopters and blimps
- Add spawn delay countdown timer to depot info panels


Version 1.1 -

- Add option for spawn delays to apply per-depot
- Fix options panel not updating on game locale change