@@ -1,5 +1,0 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
-  <package id="CitiesHarmony.API" version="2.1.0" targetFramework="net35" />
-  <package id="CitiesHarmony.Harmony" version="2.2.0" targetFramework="net35" developmentDependency="true" />
-</packages>
